# USAC

./: .gitignore  CMakeLists.txt  README.md
data/essential/: example.cfg
data/essential/test1/: Thumbs.db  sorting.txt
data/essential/test2/: Thumbs.db  orig_pts.txt  sorting.txt
data/essential/test3/: Thumbs.db  sorting.txt
data/essential/test4/: Thumbs.db  orig_pts.txt  sorting.txt
data/essential/test5/: Thumbs.db  sorting.txt
data/essential/test6/: Thumbs.db  sorting.txt
data/fundmatrix/: Thumbs.db  example.cfg
data/fundmatrix/test1/: Thumbs.db  orig_pts.txt  sorting.txt
data/fundmatrix/test10/: Thumbs.db  orig_pts.txt  sorting.txt
data/fundmatrix/test11/: Thumbs.db  orig_pts.txt  sorting.txt
data/fundmatrix/test2/: Thumbs.db  orig_pts.txt  sorting.txt
data/fundmatrix/test3/: Thumbs.db  orig_pts.txt  sorting.txt
data/homog/: example.cfg
ext/clapack-3.2.1/: CMakeLists.txt  CTestConfig.cmake  README.install  clapack-config-version.cmake.in  clapack-config.cmake.in  clapack_build.cmake
ext/libconfig-1.4.5/: ChangeLog  Makefile.am  Makefile.in  README  TODO  ac_config.h  ac_config.h.in  aclocal.m4  configure  configure.ac  libconfig.spec  libconfig.spec.in  test.cfg
matlab/: show_epipolar_lines.m  show_h_transformed.m  show_inliers.m
msvc/RunSingleTest/: RunSingleTest.cpp  RunSingleTest.vcproj
msvc/USAC/: USAC.sln  USAC.vcproj
src/config/: ConfigFileReader.h  ConfigParamsFundmatrix.cpp  ConfigParamsFundmatrix.h  ConfigParamsHomog.cpp  ConfigParamsHomog.h
src/estimators/: HomogEstimator.h  USAC.h
src/utils/: FundmatrixFunctions.cpp
(+124 files in other folders)
